--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           </tbody>
         </table>
       </div>
+      <a href="https://github.com/IZOTO-creator/Simple-calculator"Repo link</a>
     </section>
 
     <script src="index.js"></script>
